<resources>

    <string name="app_name">Force Me to Learn English</string>
    <string name="exam_skip_str">跳过</string>
    <string name="img_des">This is Image!</string>
    <string name="text_xx">XXX</string>
    <string name="note">请选出正确答案解锁屏幕</string>
    <string name="number_title">正确率:</string>
    <string name="all_title">总数:</string>
    <string name="right_title">正确数:</string>
    <string name="skip_title">跳过数:</string>
    <string name="wrong_title">错误数:</string>
    <string name="wrong_notice">好的，我记住了!</string>
    <string name="title">今日统计</string>

</resources>